Merge j21 addon module into plugin module