@@ -1,26 +1,26 @@
-package org.evenmorefish.fish.addons.item;
+package com.oheers.fish.addons.external.item;
 
 
+import com.nexomc.nexo.api.NexoItems;
+import com.nexomc.nexo.api.events.NexoItemsLoadedEvent;
+import com.nexomc.nexo.items.ItemBuilder;
 import com.oheers.fish.api.addons.ItemAddon;
 import com.oheers.fish.api.plugin.EMFPlugin;
-import io.th0rgal.oraxen.api.OraxenItems;
-import io.th0rgal.oraxen.api.events.OraxenItemsLoadedEvent;
-import io.th0rgal.oraxen.items.ItemBuilder;
 import org.bukkit.event.EventHandler;
 import org.bukkit.inventory.ItemStack;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 
-public class OraxenItemAddon extends ItemAddon {
-
+public class NexoItemAddon extends ItemAddon {
+    
     @Override
     public String getIdentifier() {
-        return "oraxen";
+        return "nexo";
     }
 
     @Override
     public String getPluginName() {
-        return "Oraxen";
+        return "Nexo";
     }
 
     @Override
@@ -35,15 +35,15 @@ public class OraxenItemAddon extends ItemAddon {
 
     @Override
     public ItemStack getItemStack(String id) {
-        if (!OraxenItems.exists(id)) {
-            getLogger().warning(() -> "Oraxen item with id %s doesn't exist.".formatted(id));
+        if (!NexoItems.exists(id)) {
+            getLogger().warning(() -> "Nexo item with id %s doesn't exist.".formatted(id));
             return null;
         }
 
-        final ItemBuilder item = OraxenItems.getItemById(id);
+        final ItemBuilder item = NexoItems.itemFromId(id);
 
         if (item == null) {
-            getLogger().info(() -> "Could not obtain Oraxen item %s".formatted(id));
+            getLogger().info(() -> String.format("Could not obtain Nexo item %s", id));
             return null;
         }
 
@@ -52,18 +52,19 @@ public class OraxenItemAddon extends ItemAddon {
 
     @Override
     public @Nullable String convertToString(@NonNull ItemStack item) {
-        String id = OraxenItems.getIdByItem(item);
+        String id = NexoItems.idFromItem(item);
         if (id == null) {
             return null;
         }
-        return "oraxen:" + id;
+        return "nexo:" + id;
     }
 
     @EventHandler
-    public void onItemsLoad(OraxenItemsLoadedEvent event) {
-        getLogger().info("Detected that Oraxen has finished loading all items...");
+    public void onItemsLoad(NexoItemsLoadedEvent event) {
+        getLogger().info("Detected that Nexo has finished loading all items...");
         getLogger().info("Reloading EMF.");
 
         EMFPlugin.getInstance().reload(null);
     }
+
 }
